infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PatientManagementVpcF1F9209A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1Subnet32B9FD34": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableA6B004E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet1EIP57CBC205": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet1EIP57CBC205",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F"
   ]
  },
  "PatientManagementVpcPublicSubnet2Subnet301A18D3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTable8FB51550": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet2EIP7F7E2B9F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet2EIP7F7E2B9F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "PatientManagementVpcPrivateSubnet1SubnetBDF7E702": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableAssociation4B6E1CD5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1DefaultRouteFABE5400": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTableAssociation1AA2E279": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2DefaultRouteB1A67D2B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    }
   }
  },
  "PatientManagementVpcIGW6E5E564D": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcVPCGW05B0D621": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSubnetGroupCED49D16": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "PatientServiceDBSecurityGroup6B97C0E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSecretAttachment90D77B03": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDBB84F9BF9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDBB84F9BF9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDBSubnetGroupCED49D16"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDBSecurityGroup6B97C0E5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
      },
      {
       "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 2
   }
  },
  "PatientManagementCluster98E10F8D": {
   "Type": "AWS::ECS::Cluster"
  },
  "PatientManagementClusterDefaultServiceDiscoveryNamespace72C5F264": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-management.local",
    "Vpc": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "AuthServiceTaskTaskRoleE466B974": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTask82E6680D": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "JWT_SECRET",
        "Value": "4f07ec7092f38dc66cf1099ba1033196e31e7e68864fdab8a5844c2fd525f4b786742766a17c8d13d51f5f33825d5c30c2735b4811a01d7822fb28053d4637d5a64295545c2a9431e5b283fd2d6c57e8106a4313c789b88a5e46c9330f63b44cc6986deb57db78a7e23a063ee744b8a9200804f57a142877bd9a0ccc0362acaa93d0f2a5c3d5eb8d399352e0f8ca746af5516b1e9ab16942d467b6152aeb7388ab4af184badb6390661edea9d327ddbb84480ac85f587449b6c7b501b7244dd85286f3231318a15fcefc2bd4c507e356c500bb0a37ad1686360f0934318c65be3bff3ccaee05f084064f3b6140e1259cc4 [...]
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Port"
            ]
           },
           "/auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "AuthServiceDBSecretAttachmentF30406A9"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AuthServiceLogGroup34125B38"
        },
        "awslogs-stream-prefix": "auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4005,
        "HostPort": 4005,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskExecutionRoleA1258495",
      "Arn"
     ]
    },
    "Family": "localstackAuthServiceTask4114E6CA",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskTaskRoleE466B974",
      "Arn"
     ]
    }
   }
  },
  "AuthServiceTaskExecutionRoleA1258495": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AuthServiceLogGroup34125B38",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3",
    "Roles": [
     {
      "Ref": "AuthServiceTaskExecutionRoleA1258495"
     }
    ]
   }
  },
  "AuthServiceLogGroup34125B38": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/auth-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthService3C2B741A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementCluster98E10F8D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AuthServiceSecurityGroup67F2FA7D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "auth-service",
    "TaskDefinition": {
     "Ref": "AuthServiceTask82E6680D"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDBHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "AuthServiceSecurityGroup67F2FA7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDBHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "BillingServiceTaskTaskRole7A547BBF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTask30D9C66E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "BillingServiceLogGroupDD61E740"
        },
        "awslogs-stream-prefix": "billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4001,
        "HostPort": 4001,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskExecutionRole11FE8DE2",
      "Arn"
     ]
    },
    "Family": "localstackBillingServiceTaskAB0446C6",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskTaskRole7A547BBF",
      "Arn"
     ]
    }
   }
  },
  "BillingServiceTaskExecutionRole11FE8DE2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BillingServiceLogGroupDD61E740",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BillingServiceTaskExecutionRoleDefaultPolicy4F4033C9",
    "Roles": [
     {
      "Ref": "BillingServiceTaskExecutionRole11FE8DE2"
     }
    ]
   }
  },
  "BillingServiceLogGroupDD61E740": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/billing-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "BillingServiceFEB36D90": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementCluster98E10F8D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BillingServiceSecurityGroup3783AD35",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "billing-service",
    "TaskDefinition": {
     "Ref": "BillingServiceTask30D9C66E"
    }
   },
   "DependsOn": [
    "BillingServiceTaskTaskRole7A547BBF",
    "MskCluster"
   ]
  },
  "BillingServiceSecurityGroup3783AD35": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/BillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServiceTaskTaskRole7A547BBF",
    "MskCluster"
   ]
  },
  "AnalyticsServiceTaskTaskRole1ABB10CB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskC3AFBC47": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AnalyticsServiceLogGroupBD82F12A"
        },
        "awslogs-stream-prefix": "analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4002,
        "HostPort": 4002,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskExecutionRoleBAF654B2",
      "Arn"
     ]
    },
    "Family": "localstackAnalyticsServiceTask353A5B10",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskTaskRole1ABB10CB",
      "Arn"
     ]
    }
   }
  },
  "AnalyticsServiceTaskExecutionRoleBAF654B2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AnalyticsServiceLogGroupBD82F12A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AnalyticsServiceTaskExecutionRoleDefaultPolicy99868928",
    "Roles": [
     {
      "Ref": "AnalyticsServiceTaskExecutionRoleBAF654B2"
     }
    ]
   }
  },
  "AnalyticsServiceLogGroupBD82F12A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/analytics-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AnalyticsServiceCD38C492": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementCluster98E10F8D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AnalyticsServiceSecurityGroupBA6AE98A",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "analytics-service",
    "TaskDefinition": {
     "Ref": "AnalyticsServiceTaskC3AFBC47"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskTaskRole1ABB10CB",
    "MskCluster"
   ]
  },
  "AnalyticsServiceSecurityGroupBA6AE98A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskTaskRole1ABB10CB",
    "MskCluster"
   ]
  },
  "PatientServiceTaskTaskRole4FB5B4E2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServiceTaskF865B565": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "PatientServiceDBB84F9BF9",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "PatientServiceDBB84F9BF9",
             "Endpoint.Port"
            ]
           },
           "/patient-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "PatientServiceDBSecretAttachment90D77B03"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       },
       {
        "Name": "BILLING_SERVICE_GRPC",
        "Value": "9001"
       }
      ],
      "Essential": true,
      "Image": "patient-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "PatientServiceLogGroup4A5C3809"
        },
        "awslogs-stream-prefix": "patient-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "patient-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4000,
        "HostPort": 4000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "PatientServiceTaskExecutionRole3782903B",
      "Arn"
     ]
    },
    "Family": "localstackPatientServiceTask2770C053",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "PatientServiceTaskTaskRole4FB5B4E2",
      "Arn"
     ]
    }
   }
  },
  "PatientServiceTaskExecutionRole3782903B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "PatientServiceLogGroup4A5C3809",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "PatientServiceTaskExecutionRoleDefaultPolicy3866E91E",
    "Roles": [
     {
      "Ref": "PatientServiceTaskExecutionRole3782903B"
     }
    ]
   }
  },
  "PatientServiceLogGroup4A5C3809": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/patient-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceA65AB800": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementCluster98E10F8D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "PatientServiceSecurityGroup547BE1F2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "patient-service",
    "TaskDefinition": {
     "Ref": "PatientServiceTaskF865B565"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "PatientServiceDBB84F9BF9",
    "PatientServiceDBSecretAttachment90D77B03",
    "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDBSecurityGroup6B97C0E5",
    "PatientServiceDBSubnetGroupCED49D16",
    "PatientServiceDBHealthCheck",
    "PatientServiceTaskTaskRole4FB5B4E2"
   ]
  },
  "PatientServiceSecurityGroup547BE1F2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/PatientService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "PatientServiceDBB84F9BF9",
    "PatientServiceDBSecretAttachment90D77B03",
    "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDBSecurityGroup6B97C0E5",
    "PatientServiceDBSubnetGroupCED49D16",
    "PatientServiceDBHealthCheck",
    "PatientServiceTaskTaskRole4FB5B4E2"
   ]
  },
  "ApiGatewayTaskDefinitionTaskRole78FC06E2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionBB9A2505": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:4005"
       },
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ApiGatewayLogGroupA9770429"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "ApiGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 4004,
        "HostPort": 4004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionExecutionRoleE78CB745",
      "Arn"
     ]
    },
    "Family": "localstackApiGatewayTaskDefinition2CA71C36",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionTaskRole78FC06E2",
      "Arn"
     ]
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleE78CB745": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ApiGatewayLogGroupA9770429",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9",
    "Roles": [
     {
      "Ref": "ApiGatewayTaskDefinitionExecutionRoleE78CB745"
     }
    ]
   }
  },
  "ApiGatewayLogGroupA9770429": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ApiGatewayServiceLB661D42EC": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ApiGatewayServiceLBSecurityGroup0E508841",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
     },
     {
      "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F",
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "ApiGatewayServiceLBSecurityGroup0E508841": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB localstackApiGatewayServiceLBD935C10B",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "ApiGatewayServiceLBSecurityGrouptolocalstackApiGatewayServiceSecurityGroup47EA876B40040666B611": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceSecurityGroup867C9DB1",
      "GroupId"
     ]
    },
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceLBSecurityGroup0E508841",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 4004
   }
  },
  "ApiGatewayServiceLBPublicListenerA86B9BC4": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ApiGatewayServiceLB661D42EC"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "ApiGatewayService4908847F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementCluster98E10F8D"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "ApiGatewayContainer",
      "ContainerPort": 4004,
      "TargetGroupArn": {
       "Ref": "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ApiGatewayServiceSecurityGroup867C9DB1",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "ApiGatewayTaskDefinitionBB9A2505"
    }
   },
   "DependsOn": [
    "ApiGatewayServiceLBPublicListenerECSGroup0BFE5495",
    "ApiGatewayServiceLBPublicListenerA86B9BC4",
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "ApiGatewayServiceSecurityGroup867C9DB1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/ApiGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "ApiGatewayServiceSecurityGroupfromlocalstackApiGatewayServiceLBSecurityGroup008100C94004D3A7817C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceSecurityGroup867C9DB1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ApiGatewayServiceLBSecurityGroup0E508841",
      "GroupId"
     ]
    },
    "ToPort": 4004
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  }
 },
 "Outputs": {
  "ApiGatewayServiceLoadBalancerDNS40D66446": {
   "Value": {
    "Fn::GetAtt": [
     "ApiGatewayServiceLB661D42EC",
     "DNSName"
    ]
   }
  },
  "ApiGatewayServiceServiceURL8E0540A6": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "ApiGatewayServiceLB661D42EC",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
